Added SEO tags.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,31 @@
   <title>MovieApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Get a random selection of videos from your YouTube playlists.">
+  <meta name="author" content="Brendt Bly">
+
+  <!-- social -->
+
+  <meta property="og:title" content="Random YouTube" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Get a random selection of videos from your YouTube playlists." />
+  <meta property="og:image" content="https://random-youtube.herokuapp.com/assets/random-youtube.jpg" />
+  <meta property="og:url" content="https://b-bly.github.io/" />
+
+  <!-- twitter -->
+
+  <meta name="twitter:title" content="Random YouTube" />
+  <meta name="twitter:description" content="Get a random selection of videos from your YouTube playlists." />
+  <meta name="twitter:image" content="https://random-youtube.herokuapp.com/assets/random-youtube.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@brendt_bly" />
+
+  <!-- facebook -->
+  <meta property="og:site_name" content="Random YouTube">
+
+  <title>Brendt Bly Web Developer</title>
+
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
