Updated readme and og url.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Get a random selection of videos from your YouTube playlists." />
   <meta property="og:image" content="https://random-youtube.herokuapp.com/assets/random-youtube.jpg" />
-  <meta property="og:url" content="https://b-bly.github.io/" />
+  <meta property="og:url" content="https://random-youtube.herokuapp.com" />
 
   <!-- twitter -->
 
